--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,10 +7,10 @@
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714293.md#1">中共空军0:4败于泰军 空军大校演讲泄真相</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11709542.md#1">【翻墙必看】中共歼-10战机由来曝光</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711294.md#1">中港警察头目会面 官媒报导不同调的背后</a><br>
-<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701362.md#1">走出华为的工程师：华为是全人类的噩梦(上)</a><br>
+<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718851.md#1">厦门地铁地面塌陷 2车坠入 大量积水涌入</a><br>
 <br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11720459.md#1">海风：中国官场迎来“辞职潮”</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11720107.md#1">王友群：香港人抗争半年的十项成果</a><br>
+<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11720459.md#1">海风：中国官场迎来“辞职潮”</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11719585.md#1">【名家专栏】“富人税”是在“劫富济贫”？</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11719997.md#1">袁斌：GDP全球第二与关押记者世界最多</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719217.md#1">周晓辉：美俄外长透秘密 北京窝心口难言</a><br>
