--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -26,6 +26,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/1/n11491428.md#1" target="_blank">【医案】横看成岭侧成峰</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/1/n11491428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/20190901-shuhuaqiu-lian-hua-01-150x120.jpg" align ="left"></a>当苏东坡在饱览庐山千姿百态的奇绝后，在西林寺墙壁上题了一首千古流传的名诗：“横看成岭侧成峰，远近高低各不同。不识庐山真面目，只缘身在此山中。”当人在看人的外型时，也会因为角度不同而有天壤之别。不知道有多少人在夜幕低垂时，为自己相貌饮恨啜泣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11688710.md#1" target="_blank">天地清明引(124) 明光殒－明光无华2</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11688710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>白门柳多日未归，傲霜枝遵照景阳之令，与众人商议后，决定再次召开武林大会，揭破武林杀人悬案真凶。是日，光明顶殃云聚集，阴风阵阵，武林中人齐聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/27/n11685002.md#1" target="_blank">善识人且能让贤 先秦著名卿相背后的伯乐</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/27/n11685002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/05/605150650401734-150x120.jpg" align ="left"></a>一个国家能否治理得好，不仅在于君王，也离不开辅佐君主的贤人。春秋时期，有一天鲁哀公问孔子：“要怎么做才能使老百姓心服呢？”孔子的回答是：“把正直的人选拔出来，放在邪曲的人之上。若是把邪曲的人选拔出来放在正直的人之上，百姓就不会心服了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:06 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695162.md#1" target="_blank">唐浩：聚心</a><br></h3>穿云万里腾   孤帆四海征   晨昏诉真相   正气天地成......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695159.md#1" target="_blank">唐浩：选贤与能</a><br></h3>贤能伪善隐一线   繁茂落归决一念   赤霾迷尘相难辨   德鉴众性良知间......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/25/n11679876.md#1" target="_blank">麦立：爱上天空</a><br></h3> 一朵小花立愿 要开在蓝天里 要开在最高处  天天默默地祈祷 天天默默地努力......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693393.md#1" target="_blank">五律：荒凉</a><br></h3> 繁华冬日碎， 未世道衰无。 水落沙洲出， 风干乱石枯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:11 PM			</td></tr>
@@ -33,6 +34,5 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693392.md#1" target="_blank">诗歌：遥望</a><br></h3>冷寂寒冬里， 长河独远巡。 风吹枯叶尽， 水结薄冰新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693686.md#1" target="_blank">诗歌：无题</a><br></h3>萧萧西风过北疆 瑟瑟寒枝落尽芳 千载沧桑浑一梦 夜阑卧听雨打窗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695164.md#1" target="_blank">唐浩：史诗</a><br></h3>正气摇天笔   良知催泪滴   丹血舞神墨   青史留胜迹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693115.md#1" target="_blank">五律：鼓</a><br></h3>洪声迈气扬，号令发轩黄。 万道雷霆势，千春日月光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
