--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701327.md#1" target="_blank">海外华人注意 微信审查来加拿大了</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701327.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/wechat-tencent-150x120.jpg" align ="left"></a>众所周知，中共一直通过各种网络平台控制中国民众的舆论。近来，这种控制事例在加拿大越来越多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701034.md#1" target="_blank">失联20年的北大博士后回应家人：别再找了</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled2-150x120.jpg" align ="left"></a>“失联20年”的北大博士后找到了！他现在美国，但却对家人说不要再通过媒体找他了，并说了7个字“清官难断家务事”，让外界匪夷所思。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11700590.md#1" target="_blank">揭中共介选十样态 台立委：急需反渗透法</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11700590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e6c5e7d526d4cd086308faa90dfc0516-150x120.jpg" align ="left"></a>2020总统选举进入倒数，中共介选问题备受各界关注。民进党立委李俊俋4日表示，从台湾首次民选总统起，中共便极力介入台湾选举，继1996年“武吓”、2000年“文攻”及2012年“以商逼政”后，中共介选手法推陈出新，包括骇客攻击、资讯操控等10种新样态，吁台湾人提高警觉，并盼尽速通过“反渗透法”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11699495.md#1" target="_blank">纽约海关今年查获假货 大部分来自中国</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11699495.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b7798355ec5646f32805f38dbb8e96f0-150x120.jpg" align ="left"></a>美国海关与边境保护局（CBP）纽约办事处3日在曼哈顿世贸中心召开年度总结记者会。记者会上，CBP展示一年来查获的各种各样仿冒品，包括最新款的山寨苹果iPhone 11 Pro、三星Note 10 plus手机、Gucci与LOUIS VUITTON皮包，及要价不菲的劳力士和Audemars Piguet手表。官员表示，大部分各类山寨品皆来自中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11709631.md#1" target="_blank">每日三退声明精选（2019/12/08）</a><br></h3>我是一名员警家属，知道我们那里有炼法轮功的被残酷迫害，今听到真相，我决定退出中共邪党的少先队组织，并且要给丈夫讲清真相，不让他参与迫害好人，选择美好未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11708050.md#1" target="_blank">四川男子双手发黑疑患血栓 医生：裤子掉色</a><br></h3>近日，四川泸州一名男子前往医院就诊，称自己双手突然发黑，认为自己患了血栓。医生让他用肥皂洗手两次后，他的皮肤恢复了正常，原来这是男子的裤子掉色所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11707999.md#1" target="_blank">深圳两幼童身上淤青不断 竟是皮肤内有虫</a><br></h3>最近，深圳两名小兄妹身上反复出现淤青，且每次淤青的位置都不定，于是被送往医院检查。据医生介绍，小兄妹被确诊为绦虫类囊虫病，虫子进入人体后在体内到处游走，导致皮出现结节和轻微淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11707874.md#1" target="_blank">每日三退声明精选（2019/12/07）</a><br></h3>我“六四”时就想退出共产党，当时把党委的领导吓得够呛，硬劝结果没退成。因为家庭背景是高干，我对共产党看得很透了，也看了“九评共产党”。现在我声明退出入过的党团队一切共产党的组织，与邪恶彻底决裂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:56 AM							</td></tr>
