--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -30,7 +30,9 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712688.md#1" target="_blank">横河：华为251翻船 偶然还是必然</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/henhe1-600x400-1-1-150x120.jpg" align ="left"></a>（主持人：杨光 / 嘉宾：横河）华为前员工李洪元被华为诬告关押251天事件持续发酵，使孟晚舟被抓一年来精心打造的形象严重受损，民意逆转。此事为何成为网络和媒体热点，这次华为的公关为何不灵，民族主义为何用不上了？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712533.md#1" target="_blank">洪微：中共的“初级阶段”也走到头了</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712533.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/67-4-150x120.jpg" align ="left"></a>文革之后，邓小平重新掌权，中共的社会主义道路，已经走不下去了，再瞎折腾，中共就是死路一条。不得已，邓小平只能改革开放，对内允许私营经济，对外拥抱西方资本主义，但这样的做法，实质等于否定了中共灌输的社会主义理论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712465.md#1" target="_blank">严晓：从何君尧册封博士说起</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190722052739100484-150x120.jpg" align ="left"></a>赤膊上阵喊出对民主派“杀无赦”的何君尧得到大陆政法大学授予的荣誉博士学位，他为此欢欣鼓舞，还得意道：“内地人比香港人可爱多了，我在Facebook 经营多年才只有十五万粉丝，在内地网站刚一注册就有一百万粉丝。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712285.md#1" target="_blank">王友群：邓炳强新官上任 未来结局如何？</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zEogqcK-1-800x450@1200x1200-600x400-1-1-150x120.jpg" align ="left"></a>近日，香港警务处新任处长邓炳强到北京，拜访了中共公安部长赵克志、中央政法委书记郭声琨等。据邓炳强讲，中共对香港警方工作给予肯定，表示将“全力支持”他继续“止暴制乱”；他也一再表决心将全力以赴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:42 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716727.md#1" target="_blank">夏林:北约对中共的警醒</a><br></h3>中共还没从王立强出逃、香港区选泛民大胜、美国通过香港人权民主法案等一系列大棒捶打中清醒过来，北约峰会又给它两拳重击。
+
+北约成立的时间很凑巧，是1949年，与中共建政同年。可能天意自有安排，但当初成立时，是为了对付以苏联为首的华沙条约组织，现在由跨越欧洲和北美的29个国家组成，北约军事开支占世界国防开支的70%。北.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/6/n11706333.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（8）</a><br></h3>亚氏逻辑学概念获取的基本要求是含义明确，不含混，唯一确定。以其为基础的近代科学更是立足于精确定义的概念，多数概念利用属种差方法来定义。这种概念与近代科学的认识论基础相一致的是，虽然在含义的精确性上有着优势，但是往往缺乏表达能力，会造成近代科学中的复杂性和非线性问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716489.md#1" target="_blank">项云：对女性禽兽不如恶魔行径戳穿中共画皮</a><br></h3>有中共起，它就响当当叫喊男女平等，批判“旧社会”欺压妇女，新社会妇女“翻身得解放”，“妇女能顶半边天”等等，似乎很尊重妇女。可是，迫害法轮功二十余年，爆料出冰山一角对女性法轮功学员的迫害，恶魔禽兽不如案例比比皆是遍及中国所有角落：毒打、酷刑、电击、针刺、剥光衣服冷冻、浇冷水、不许睡觉，强奸、轮奸；烫烙、击打和电击生理器.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715313.md#1" target="_blank">廖祖笙：习近平快意于虐待老人和儿童？</a><br></h3>习近平先生，你说要全面建成小康社会，说要坚决打赢脱贫攻坚战……类似的表述可谓百转千回、余音绕梁，而你治下的现实，却是一次次这般耳光响亮。匪区庶民普遍是一种怎样惨淡的活法，在此姑置不论，单是我家，为了一个吃饭的问题，这回就已是第二轮向你苦苦申诉了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:22 PM			</td></tr>
