--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -18,14 +18,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11656640.md#1" target="_blank">一周内 美海关抓捕13偷渡入境中国人</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11656640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806040314512109-150x120.jpg" align ="left"></a>11月10日和7日，美国海关与边境保卫局（U.S. Customs and Border Protection，简称CBP）两次发布新闻稿，截获偷渡入境中国人，一共13名中国偷渡者被捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 6:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654473.md#1" target="_blank">50年来最严重水患 威尼斯世界遗产遭淹</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/04490663f71192786aa86db9354792b8-150x120.jpg" align ="left"></a>威尼斯遭到五十多年来最严重的水患，学校关闭停课、世界遗产圣马可大教堂受损。威尼斯市长表示这是一场“灾难”，且威尼斯的雨势也尚未停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11654178.md#1" target="_blank">加智库：中共威胁成美朝野共识 加国需警觉</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11654178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9G9A5751-1-150x120.jpg" align ="left"></a>目前，美国共和党和民主党对中共威胁与渗透已经形成共识，但是渥太华智库认为，加拿大对此还没有足够的警觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/20/n11667707.md#1" target="_blank">每日三退声明精选（2019/11/19）</a><br></h3>中共暴行甲天下，戾暴恶行人人骂。
-衣冠禽兽伪君子，香港暴行上演了。
-和平请愿，被抓被打被杀；
-舆论造假，把香港同胞丑化；
-中共暴行，曝光天下。
-香港同胞，英勇可嘉。
-悲愤之余，教师真话。
-退团退队，不被恶党绑架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11653150.md#1" target="_blank">华为手机现“中国台湾”NCC：不得在台贩售</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11653150.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1510140420011664-150x120.jpg" align ="left"></a>日前华为手机遭爆料，手机更新后系统显示会变成“中国台湾”。对此，NCC也在11月12日发函给手机品牌业者，要求在进行审验装置时必须签下切结书，不得在系统中出现“中国台湾”，否则将会撤销验证证明，手机装置也不得在台湾贩售。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11665863.md#1" target="_blank">疑长期受欺凌 上海14岁中学生喝农药身亡</a><br></h3>11月14日，在上海南翔中学借读的14岁河南籍学生卢诗杰喝农药自杀，次日身亡。据他的同学透露，卢诗杰长期被同学欺凌，甚至于他的每一个家人都被欺凌者起了绰号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11665161.md#1" target="_blank">每日三退声明精选（2019/11/18）</a><br></h3>中共恶党窃国七十年，对十四亿中国人的谎言洗脑，对各种宗教信仰的残酷迫害有目共睹。最近在全世界众目睽睽下，又对香港人暴力残杀，还撒着弥天大谎。中共邪教不解体，老百姓没有好日子过。摆脱中共、消灭中共是中华儿女的责任。中共是全人类的万恶之源。是地地道道的政教合一的邪教！天灭中共！恢复中华民族敬天信神传统！做中华儿女！不做马列子孙。我们声明退出中共邪教的一切组织，决.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 11:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11662461.md#1" target="_blank">每日三退声明精选（2019/11/17）</a><br></h3>力挺香港同胞，大陆人民不全部都是唯利是图的人，很多很多都是有良知的，很多人民都是支持香港同胞争取自由民主的，关于国内媒体的新闻跟下面的评论，都是官方水军的，媒体新闻跟评论根本就不让发表任何反对声音，我们只有在心里默默支持，请外界同胞不要相信大陆的媒体宣传跟评论，大陆千千万万人跟你们站在一起，只是发表不出来，我们爱这个国家，爱这个民族，只是不爱这个邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:53 AM							</td></tr>
