--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/11/n11445684.md#1" target="_blank">台风登陆前 山东寿光蔬菜大棚再次被淹</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/11/n11445684.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/GettyImages-1024717528-2-150x120.jpg" align ="left"></a>今年第九号台风“利奇马”登陆浙江，给当地造成灾难。截至目前已致浙江32人死亡，16人失联。“利奇马”移出浙江还未登陆山东之际，山东多地已遭遇大雨，“蔬菜之乡”寿光大量蔬菜大棚被淹。受“利奇马”影响，安徽宣城市山洪爆发，不少村庄被淹没，很多民众被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月11日 6:57 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/10/n11444276.md#1" target="_blank">利奇马台风重创浙江 致32死16失联</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/10/n11444276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/IMG_6277-150x120.jpeg" align ="left"></a>今天（8月10日），台风“利奇马”直扑大陆沿海省市，出现狂风暴雨，浙江、上海、江苏3省遭受重创。目前已造成22人死亡、10人失联，417万人受灾，700余间房屋倒塌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月11日 8:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/9/n11443036.md#1" target="_blank">江西庐山9游客遭雷击 3人轻伤2人重伤</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/9/n11443036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/007c826c28055c35ab49b3d129bbd086-150x120.jpg" align ="left"></a>8月7日上午，江西庐山风景区多名游客被雷电击中，5人受伤，其中2人重伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月10日 2:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/9/n11441434.md#1" target="_blank">湖南常德一河面漂浮大量死猪 臭气熏天</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/9/n11441434.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a9d58059d0b38147eab077765f0459fb-600x400-150x120.jpg" align ="left"></a>近期，湖南常德市安乡县松滋河区段每天都有大量死瘟疫猪漂浮，臭气熏天，引发当地民众的不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月09日 12:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/4/n11497860.md#1" target="_blank">23名大陆游客新西兰遇车祸 6死17伤</a><br></h3>当地时间9月4日早上11点20分，新西兰北岛一辆载有23名中国旅客的旅游巴在著名旅游胜地罗托鲁瓦（Rotorua）附近的公路行驶时翻侧，造成6死17伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月04日 4:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/2/n11493170.md#1" target="_blank">开学日 湖北恩施一小学发生砍人案8死2伤</a><br></h3>9月2日是大陆学生开学日，湖北恩施发生学生被斩事件。官方称，目前凶案已造成10名学生受伤，但网上的消息称，已经有8人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 10:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/29/n11484684.md#1" target="_blank">海南儋州市那大镇突发龙卷风 至少8死2伤</a><br></h3>8月29日凌晨3时半左右，海南儋州市市区中兴大街与工业路交叉口附近区域突发龙卷风，导致那大镇两处工地宿舍倒塌，8人死亡，2人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/28/n11482732.md#1" target="_blank">杭州一小区路面突然塌陷 居民楼倾斜</a><br></h3>8月28日，浙江省杭州闹市区的建国北路树园小区门口路段突然出现地面塌陷，冒出大量黄烟，该小区31幢出现倾斜。同一天，广东省深圳罗湖区和平新居一栋6层单身公寓楼也突然倾斜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 6:39 PM							</td></tr>
