--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -18,7 +18,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693220.md#1" target="_blank">分析：向心代表中共两大权贵 经营香港产业</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/02a4054f7a6acdba5e3fbf76773950ba-150x120.jpg" align ="left"></a>香港中国创新投资公司负责人向心夫妇，因卷入共谍案遭带回调查，外界关心向心在中港台扮演的角色为何？中国问题专家江锋表示，由于香港可避开西方制裁进口军品，所以90年代初，掌握国防科工委的聂荣臻家族在香港布点，而批准经费的则是中共元帅叶剑英的女婿、国务院副总理邹家华，因此向心是代表叶、聂两大家族在香港进行买卖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 9:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/30/n11692057.md#1" target="_blank">中共卫生部前官员再揭“河南血祸”真相</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/30/n11692057.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/image-3@1200x1200-150x120.jpg" align ="left"></a>12月1日又是一年一度的世界艾滋病日。一位中共卫生部前官员又一次发文披露河南血祸真相，并痛批先后包庇此事的多名中共领导人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 7:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11690714.md#1" target="_blank">高以翔猝逝 袁立斥责节目方：还欠我一个道歉</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11690714.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/yuanli-meitu_1-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔27日在录制浙江卫视综艺节目《追我吧》时骤逝，噩耗震惊各界。众多粉丝和明星艺人都发文悼念，节目组也因疑似延误救命被炮轰是“自杀节目”、“收买人命”。29日，浙江卫视终于发表声明，对高以翔的离世感到遗憾和惋惜，表示愿意承担一切责任，不过，引来之前与浙江卫视有过恩怨的女演员袁立斥责：“还欠我一个道歉的声明！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11690316.md#1" target="_blank">悼念已故好友高以翔 林书豪穿特制战靴参赛</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11690316.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/12/51a9a904b232099f3669b26312308265-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔27日在大陆录制综艺节目《追我吧》骤逝，消息震惊各界。与其交情甚深的篮球巨星林书豪，28日晚穿上印有两人合照和特别字样的战靴在北京参赛。赛后受访时他脸色凝重，当晚也在Instagram（IG）写下悲痛心情，表达对好友的不舍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 7:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11699885.md#1" target="_blank">地陷埋3人后 广州又一处路面发生塌陷</a><br></h3>继12月1日，广州市大道北与禺东西路交界处发生地面塌陷后，12月3日，番禺南村镇番禺大道南往北方向一处人行道上也发生地面塌陷。不过，无人员伤亡。而此前的塌陷导致3人被埋，当局直接往坑中填水泥，受害人家属连日打横幅抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11699099.md#1" target="_blank">每日三退声明精选（2019/12/03）</a><br></h3>我的父亲在毛贼东及中共的欺骗下曾为中共军队作战一度几乎成为了中共的炮灰。中共野蛮地所做所为为全世界人民所震惊。中国人民只有彻底推翻共产党才能看到希望。中共在多年的统治中残害了大量无辜的百姓，吞噬了大量无辜的生命。我很高兴未曾加入过邪恶的中国共产党。在此强烈声明立刻退出中国少先队、中国共青团和中共匪的任何一切组织。我要做一个清清白白的人。希望正义的美国和善良的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11697447.md#1" target="_blank">广西乡医称喝长生液活120岁 网民嘲讽</a><br></h3>近日大陆网传一张照片，一群穿着白大褂的医生围着一锅液体，横幅上写着“高手在民间 神方在乡里 广西宾阳乡医熬制长生液现场会 人类活到120岁不是神话”。此事引发网民热议，有网民讽刺：“特供，必须特供！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:27 PM							</td></tr>
