--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11664341.md#1" target="_blank">【新闻看点】鼠疫涉陆三省？最可怕不是疫情</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11664341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/plague4-1112-600x400-1-150x120.jpg" align ="left"></a>网络传出，北京多家医院都收治了疑似鼠疫患者。医院要求病人报告最近是否去过青海、甘肃和内蒙古地区。据此外界推测，这三个省区可能都已经发生了鼠疫。但是中共一直语焉不详，有专家推测，大陆的鼠疫可能比想像中还要严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/17/n11661503.md#1" target="_blank">内蒙新增鼠疫病例 疫情全貌遭严密封锁</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/17/n11661503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/image-5-150x120.jpg" align ="left"></a>蒙古卫健委周日（17日）凌晨发布消息称，当地卫生部门在一天前确诊一位在乌兰察布市化德县医院就诊的55岁患者，受到腺鼠疫情感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/17/n11661086.md#1" target="_blank">内蒙又1人被确诊鼠疫 28人曾与之密切接触</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/17/n11661086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/08/908051910581497-150x120.jpg" align ="left"></a>11月17日，中共官方披露，16日，内蒙古自治区锡林郭勒盟镶黄旗巴音塔拉苏木采石场一男子，在乌兰察布市化德县医院就诊期间，被确诊为患上腺鼠疫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/16/n11659501.md#1" target="_blank">北京医院疑爆发鼠疫 医生曝已有多人感染</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/16/n11659501.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/978451ccdbaf6f7c0fc58ca9e587cf90-150x120.jpg" align ="left"></a>最近北京确诊两例肺鼠疫，同时官方严密封锁消息。但据北京医生透露，已有多人感染，并传有人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 11:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11699970.md#1" target="_blank">乌鲁木齐机场因天气影响 4000余人滞留</a><br></h3>12月4日，乌鲁木齐机场因受天气影响，截止下午1时，已有4000人滞留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11697025.md#1" target="_blank">北京顺义一豆馅厂房爆炸 4死10伤</a><br></h3>12月3日另成3时7分左右，北京顺义区牛栏山镇京日东大食品有限公司一加工豆馅厂房发生爆炸。截止目前，4人死亡10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11696856.md#1" target="_blank">张家口4分钟内两次地震 北京居民有震感</a><br></h3>12月3日，河北张家口市怀安县连续发生两次地震，一次2.9级，一次3.4级。不少北京网民表示有震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11696472.md#1" target="_blank">北京顺义一厂房发生爆炸 已致1死11伤</a><br></h3>今天（3日）凌晨，北京顺义区牛栏山镇有工厂发生爆炸，事故造成11人送医救治、2人失联、1人死亡，目前正调查爆炸原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:41 AM							</td></tr>
